# hicsv

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini  workflow memo.md
docs/: .buildinfo  genindex.html  hicsv.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  hicsv.doctree  index.doctree  modules.doctree
docs/_modules/: hicsv.html  index.html
docs/_sources/: hicsv.rst.txt  index.rst.txt  modules.rst.txt
hicsv-python/: meta.yaml
src/hicsv/: __init__.py
src/pyhicsv/: __init__.py
test/: example.txt  multiple keys, novalues.txt  no header contents, multiple keys, novalues.txt  no header contents, no keys, novalues.txt  no header contents, single blank key, novalues.txt  non hicsv csv.csv  tab separated values.txt  test1.py  test2.py  test2.txt  test3.py  test_txt2hicsv.py
tests/: test_hicsv.py
