[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hicsv-python"
version = "0.0.0"
description = "Python implementation of the Header-Included Comma-Separated Values (hicsv) file format. "
readme = "README.md"
authors = [{name = "Shintaro Nakagawa", email = "shntrnkgw@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23"
]

[project.urls]
Homepage = "https://github.com/shntrnkgw/hicsv"

[tool.setuptools]
package-dir = {"" = "src"}